# wu

./: .gitignore  Cargo.toml  input.css  tailwind.config.js
src/: lib.rs  main.rs
src/components/: accordion.rs  button.rs  collapse.rs  debug_console.rs  drawer.rs  dropdown.rs  input.rs  mod.rs  modal.rs  modals.rs  shell.rs  stack_context.rs  table.rs  tabs.rs  toasts.rs
src/routes/: accordion.rs  collapses.rs  drawers.rs  home.rs  mod.rs  modals.rs  shells.rs  tabs.rs  toasts.rs
src/utils/: errors.rs  focus_trap.rs  locatable_view_fn.rs  marked.rs  mod.rs  show.rs  states.rs  text.rs  theme.rs
style/: webutils.css
wu-demo/: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  tailwind.config.js
wu-demo/src/: main.rs  prelude.rs
wu-demo/src/components/: brand.rs  mod.rs
wu-demo/src/routes/: avatar.rs  drawers.rs  mod.rs  modals.rs  shells.rs  tabs.rs  toasts.rs
wu-demo/style/: main.scss
wu-docs/: Cargo.toml  index.html  tailwind.config.js
wu-docs/src/: main.rs  prelude.rs
wu-docs/src/ui/: app.rs  mod.rs
wu-docs/src/ui/docs/: action_button_docs.rs  debug_console_docs.rs  drawer_docs.rs  dropdown_docs.rs  input_code_docs.rs  input_docs.rs  mod.rs  modal_docs.rs  shell_docs.rs  stack_context_docs.rs  tabs_docs.rs  toasts_docs.rs
wu-tw/: index.js  webutils.css  wu-dynamic.css  wu.css
wu-tw/plugins/: all.plugin.js  components.plugin.js  utilities.plugin.js
wu-tw/plugins/components/: alert.plugin.js  avatar.plugin.js  badge.plugin.js  breadcrumbs.plugin.js  btn.plugin.js  btns.plugin.js  card.plugin.js  carousel.plugin.js  chip.plugin.js  code.plugin.js  drawer.plugin.js  footer.plugin.js  forms.plugin.js  icons.plugin.js  kbd.plugin.js  loading.plugin.js  overlay.plugin.js  placeholder.plugin.js  progress.plugin.js  steps.plugin.js  tabs.plugin.js  window.plugin.js
wu-tw/plugins/utilities/: backgrounds.plugin.js  center.plugin.js  cover.plugin.js  divider.plugin.js  ghost.plugin.js  hide-scrollbar.plugin.js  highlight.plugin.js  horizontal.plugin.js  indicator.plugin.js  link.plugin.js  mask.plugin.js  scroll-color.plugin.js  square.plugin.js  stack.plugin.js  surface.plugin.js  swap.plugin.js  text-outline.plugin.js  thin-scrollbar.plugin.js  vertical.plugin.js  x.plugin.js
wu-tw/styles/: all.preset.js  components.css  core.css  tailwind.css  utilities.css
wu-tw/styles/components/: forms.css
wu-tw/styles/presets/: colors.preset.js  core.preset.js  screens.preset.js
wu-tw/styles/utilities/: colors.css
