[package]
name = "wu"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web
# http = "1.0"
web-sys = { version = "0.3", features = [
	"Document", 
	"Element", 
	"NodeList", 
	"Event", 
	"EventTarget", 
	"KeyboardEvent", 
	"HtmlSelectElement",
	"CustomEvent",
	"CustomEventInit",
]}
# leptos
leptos = { version = "0.7" }
leptos_router = { version = "0.7" }
leptos-use = { version = "0.15" }
reactive_stores = { version = "0.1" }
# logging
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
# common
thiserror = "1.0"
serde = "1.0"
uuid = { version = "1.10", default-features = false, features = ["v4"] }
serde_json = { version = "1.0" }

[features]
default = ["csr"]
csr = [
	"leptos/csr", 
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
