[package]
name = "wu-demo"
version = "0.1.0"
edition = "2021"
description = "A demo and docs site to show off `wu` features."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# app
wu = { path = "../" }
i18n-web = { git = "ssh://git@github.com/Instant-Reactive-Systems/i18n-web.git" }
# web
http = "1.0"
tailwind_fuse = { version = "0.1" }
web-sys = { version = "0.3", features = [
	"Document", 
	"Element", 
	"NodeList", 
	"Event", 
	"EventTarget", 
	"KeyboardEvent", 
	"HtmlSelectElement"
]}
# leptos
leptos = { version = "0.6", features = ["nightly"] }
leptos-use = { version = "0.10" }
leptos_meta = { version = "0.6", features = ["nightly"] }
leptos_router = { version = "0.6", features = ["nightly"] }
# logging
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
# common
thiserror = "1.0"

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[workspace]
