[package]
name = "wu-docs"
version = "0.1.0"
edition = "2024"

[dependencies]
# app
wu = { path = "../" }
# web
http = "1.0"
web-sys = { version = "0.3", features = ["Event", "EventTarget", "HtmlSelectElement", "Performance"] }
gloo-net = { version = "0.6", features = ["http"] }
gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
# leptos
leptos = { version = "0.8", features = ["tracing"] }
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8" }
leptos-use = { version = "0.16.0-beta", default-features = false }
reactive_stores = { version = "0.2" }
# logging
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tracing-subscriber-wasm = { version = "0.1", optional = true }
# common
uuid = { version = "1.10", default-features = false, features = ["v4"] }
fluent = "0.16"
fluent-templates = { version = "0.12" }
once_cell = "1.19"
thiserror = "1.0"
serde = "1.0"
codee = { version = "0.3", default-features = false, features = ["json_serde"] }
serde_json = { version = "1.0" }
strum = { version = "0.26", features=["derive"] }
jsonwebtoken = "9.3"
send_wrapper = "0.6"
anyhow = "1.0"
secrecy = { version = "0.10.3", features = ["serde"] }
chrono = "0.4"

[features]
default = [
    "csr",
    # "leptos-use/use_calendar",
    # "leptos-use/use_textarea_autosize",
    # "leptos-use/use_web_lock",
    # "leptos-use/use_window_size",
    # "leptos-use/is_err",
    # "leptos-use/is_none",
    # "leptos-use/is_ok",
    # "leptos-use/is_some",
    "leptos-use/on_click_outside",
    # "leptos-use/signal_debounced",
    # "leptos-use/signal_throttled",
    "leptos-use/storage",
    # "leptos-use/sync_signal",
    "leptos-use/use_active_element",
    # "leptos-use/use_breakpoints",
    # "leptos-use/use_broadcast_channel",
    # "leptos-use/use_calendar",
    # "leptos-use/use_clipboard",
    # "leptos-use/use_color_mode",
    # "leptos-use/use_cookie",
    # "leptos-use/use_css_var",
    # "leptos-use/use_cycle_list",
    # "leptos-use/use_debounce_fn",
    # "leptos-use/use_device_orientation",
    # "leptos-use/use_device_pixel_ratio",
    # "leptos-use/use_display_media",
    "leptos-use/use_document",
    # "leptos-use/use_document_visibility",
    "leptos-use/use_draggable",
    "leptos-use/use_drop_zone",
    # "leptos-use/use_element_bounding",
    # "leptos-use/use_element_hover",
    # "leptos-use/use_element_size",
    # "leptos-use/use_element_visibility",
    "leptos-use/use_event_listener",
    # "leptos-use/use_event_source",
    # "leptos-use/use_favicon",
    "leptos-use/use_geolocation",
    # "leptos-use/use_idle",
    # "leptos-use/use_infinite_scroll",
    # "leptos-use/use_intersection_observer",
    # "leptos-use/use_interval",
    "leptos-use/use_interval_fn",
    # "leptos-use/use_intl_number_format",
    # "leptos-use/use_locale",
    # "leptos-use/use_locales",
    # "leptos-use/use_media_query",
    # "leptos-use/use_mouse",
    # "leptos-use/use_mouse_in_element",
    # "leptos-use/use_mutation_observer",
    # "leptos-use/use_permission",
    # "leptos-use/use_preferred_contrast",
    # "leptos-use/use_preferred_dark",
    # "leptos-use/use_prefers_reduced_motion",
    # "leptos-use/use_raf_fn",
    # "leptos-use/use_resize_observer",
    # "leptos-use/use_scroll",
    # "leptos-use/use_service_worker",
    # "leptos-use/use_sorted",
    # "leptos-use/use_supported",
    # "leptos-use/use_throttle_fn",
    "leptos-use/use_timeout_fn",
    # "leptos-use/use_timestamp",
    # "leptos-use/use_toggle",
    # "leptos-use/use_to_string",
    # "leptos-use/use_user_media",
    # "leptos-use/use_web_notification",
    "leptos-use/use_websocket",
    "leptos-use/use_window",
    # "leptos-use/use_window_focus",
    # "leptos-use/use_window_scroll",
    # "leptos-use/watch_debounced",
    # "leptos-use/watch_pausable",
    # "leptos-use/watch_throttled",
    # "leptos-use/watch_with_options",
    # "leptos-use/whenever"
]
csr = [
    "leptos/csr",
    "uuid/js",
]
tracing = [
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tracing-subscriber-wasm",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 'z'

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

# for custom leptos patching
# [patch.crates-io]
# leptos = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# leptos_router = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# leptos_server = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# tachys = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# either_of = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# reactive_graph = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# reactive_stores = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }
# reactive_stores_macro = { git = "ssh://git@github.com/Instant-Reactive-Systems/leptos.git", branch = "latest" }

# [patch.crates-io]
# leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# leptos_router = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# leptos_server = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# tachys = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# either_of = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# reactive_graph = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# reactive_stores = { git = "https://github.com/leptos-rs/leptos", branch = "main" }
# reactive_stores_macro = { git = "https://github.com/leptos-rs/leptos", branch = "main" }